# agent-readiness-scorecard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_TEMPLATE.md  CHANGELOG.md  LICENSE  Makefile  QA_REPORT.md  README.md  RECOMMENDATIONS.md  SECURITY.md  advise_output.txt  agent-readiness-scorecard.example.toml  agent-scorecard.example.toml  agent_report.md  agents.md  changed_files.lst  check_all_metrics.py  check_metrics.py  instructions.md  pr_body.md  pyproject.toml  report.md  ruff_errors.txt  run_scorecard.sh  scorecard.txt  test_prompt.txt  test_report.md  typing_tasks.json
.github/workflows/: agent-advisor.yaml  agent-gatekeeper.yaml  agent-score.yml  ci.yml  enforce-beta.yml  issue-agent.yaml  jules-prompt-gatekeeper.yml  manual-release.yaml  publish.yml  release.yml  scorecard_automation.yml
baml_src/: analysis.baml  schema.baml
docs/: Agent_Readiness_Research.md  CONCEPTS.md  Product Requirements Doc v1.0.md
scripts/: process_scorecard.py  release.sh  set_beta_workflow.sh
src/agent_readiness_scorecard/: analyzer.py  auditor.py  auditor_utils.py  config.py  dependencies.py  fix.py  graph.py  llm.py  main.py  prompt_analyzer.py  remediation.py  report.py  scoring.py  types.py
src/agent_readiness_scorecard/analyzers/: config.py  docker.py  javascript.py  markdown.py  python.py
src/agent_scorecard/: analyzer.py  auditor.py  auditor_utils.py  checks.py  config.py  console.py  constants.py  dependencies.py  fix.py  graph.py  llm.py  main.py  metrics.py  prompt_analyzer.py  report.py  report_sections.py  scoring.py  types.py  utils.py
src/agent_scorecard/analyzers/: base.py  config.py  docker.py  java.py  javascript.py  markdown.py  python.py
tests/: test_acl.py  test_acl_refactor_verification.py  test_advisor.py  test_agentic_bonuses.py  test_analyzer_imports.py  test_analyzer_new.py  test_async_support.py  test_auditor.py  test_auditor_ecosystem.py  test_cli.py  test_cli_diff.py  test_cli_prompts.py  test_cli_report_style.py  test_config.py  test_config_analyzer.py  test_config_report_style.py  test_dependencies.py  test_dependencies_exclusion.py  test_docker_analyzer.py  test_fix_command.py  test_graph.py  test_java_analyzer.py  test_javascript_analyzer.py  test_js_no_treesitter.py  test_limit_to.py  test_llm.py  test_logic.py  test_main.py  test_main_metrics.py  test_markdown_analyzer.py  test_process_scorecard.py  test_prompt_analyzer.py  test_regression_guard.py  test_report.py  test_report_acl_success.py  test_report_full.py  test_report_style.py  test_robustness.py  test_scoring_acl.py  test_token_economics.py  (+2 more)
tools/: gen_changelog.py
