[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-scorecard"
dynamic = ["version"]
description = "A tool to analyze codebases for AI-Agent Friendliness"
readme = "README.md"
authors = [{ name = "Jules", email = "jules@example.com" }]
dependencies = [
    "mccabe",
    "rich",
    "click",
    "tiktoken",
    "networkx",
    "tomli; python_version < '3.11'",
]
requires-python = ">=3.8"

[project.scripts]
agent-score = "agent_scorecard.main:cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "bandit",
    "pip-audit",
    "pre-commit",
    "types-requests",
    "types-click",
    "types-toml",
    "types-tabulate",
    "types-networkx"
]

[tool.setuptools_scm]
write_to = "src/agent_scorecard/_version.py"

[tool.agent-scorecard]
agent = "generic"
verbosity = "summary"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "mccabe"
ignore_missing_imports = true
