[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agent-scorecard"
dynamic = ["version"]
description = "A tool to analyze codebases for AI-Agent Friendliness"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jules", email = "jules@example.com" }]

dependencies = [
    "mccabe>=0.7.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "tiktoken>=0.7.0",
    "networkx>=3.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/brewmarsh/agent-readiness-scorecard"
Repository = "https://github.com/brewmarsh/agent-readiness-scorecard.git"
Issues = "https://github.com/brewmarsh/agent-readiness-scorecard/issues"

requires-python = ">=3.10"

[project.scripts]
agent-score = "agent_scorecard.main:cli"

[project.optional-dependencies]
all = [
    "litellm>=1.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6.0",
    "types-requests",
    "types-click",
    "types-toml",
    "types-tabulate",
    "types-networkx",
    "types-PyYAML",
    "agent-scorecard[all]",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/agent_scorecard/_version.py"

[tool.agent-scorecard]
agent = "generic"
verbosity = "summary"
report_style = "actionable"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "mccabe"
ignore_missing_imports = true
