[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agent-readiness-scorecard"
dynamic = ["version"]
description = "A tool to analyze codebases for AI-Agent Friendliness"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.10"

dependencies = [
    "mccabe>=0.7.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "tiktoken>=0.7.0",
    "networkx>=3.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/brewmarsh/agent-readiness-scorecard"
Documentation = "https://github.com/brewmarsh/agent-readiness-scorecard#readme"
Repository = "https://github.com/brewmarsh/agent-readiness-scorecard.git"
Issues = "https://github.com/brewmarsh/agent-readiness-scorecard/issues"

[project.scripts]
# Note: Ensure your internal folder is named agent_readiness_scorecard
agent-score = "agent_readiness_scorecard.main:cli"

[project.optional-dependencies]
llm = ["litellm>=1.0.0"]
treesitter = [
    "tree-sitter>=0.22.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]
all = [
    "agent-readiness-scorecard[llm,treesitter]",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6.0",
    "types-requests",
    "types-click",
    "types-toml",
    "types-tabulate",
    "types-networkx",
    "types-PyYAML",
    "agent-readiness-scorecard[all]",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/agent_readiness_scorecard/_version.py"

# RESOLUTION: Explicitly map src-layout to prevent 'src' folder from being installed
[tool.hatch.build.targets.wheel]
packages = ["src/agent_readiness_scorecard"]

[tool.agent-readiness-scorecard]
agent = "generic"
verbosity = "summary"
report_style = "actionable"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "mccabe"
ignore_missing_imports = true